<resources>
    <string name="app_name">Grateful Note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_gratitude">Add New Gratitude</string>
    <string name="what_made_grateful">What made you feel grateful today?</string>
    <string name="describe_your_positive_emotion">Detailed Description So You Can Feel It</string>
    <string name="submit">Submit</string>
    <string name="type_of_positive_emotion">Type</string>
    <string name="delete">delete</string>
    <string name="positive_emotion_type_formatting">(%1$s)</string>
    <string name="empty_date">--/-/----</string>
    <string name="date_selector_label">date</string>
    <string name="filter_by">Filter By :</string>
    <string name="help">help</string>
    <string name="positive_emotion_description">
        Joy :\n\tPerasaan</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="save_change">Save Changes</string>
    <string name="confirm_save">Are you sure to save the changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="set_password">Set Password</string>
    <string name="switch_notification_text">Daily Notification</string>
    <string name="muncul_setiap">Muncul Setiap</string>
    <string name="saved_notification_time">SavedNotificationTime</string>
    <string name="default_notification_time">00:00</string>
    <string name="saved_switch_status">SavedNotificationSwitchStatus</string>
    <string name="set_notification">Daily Reminder</string>
    <string name="notification_content_text">Ayo bersyukur untuk hari ini!</string>
    <string name="notification_channel_id">ChannelId</string>
    <string name="notification_channel_name">Daily Reminder</string>
    <string name="notification_description">Pengingat agar kamu bersyukur</string>
    <string name="ya">Ya</string>
    <string name="confirm_edit_save_content">Yakin ingin meyimpan perubahan?</string>
    <string name="gak">Gak</string>
    <string name="confirm_edit_cancel_content">Yakin ingin membuang perubahan?</string>
    <string name="confirm_edit_save_value_key">ConfirmEditSaveKey</string>
    <string name="confirm_edit_save_request_key">ConfirmEditSaveRequestKey</string>
    <string name="confirm_edit_cancel_request_key">ConfirmEditCancelRequestKey</string>
    <string name="confirm_edit_cancel_value_key">EditCancelValueKey</string>
    <string name="clock_picker_request_key">ClockPickerRequestKey</string>
    <string name="clock_picker_cancel_key">ClockPickerCancelKey</string>
    <string name="clock_picker_hour_key">ClockPickerHourKey</string>
    <string name="clock_picker_minute_key">ClockPickerMinuteKey</string>
    <string name="clock_picker_clock_key">ClockPickerClockKey</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="filter_dialog_title">Filter</string>
    <string name="new_gratitude">New Gratitude</string>
    <string name="feedback">Feedback</string>
    <string name="terapkan">terapkan</string>
    <string name="batal">batal</string>
    <string name="bulan">Bulan</string>
    <string name="pembatas">/</string>
    <string name="tahun">Tahun</string>
    <string name="date_switch_filter_label">Terbaru</string>
    <string name="semua">Semua</string>
    <string name="email_address">aimanhezbi@gmail.com</string>
    <string name="subject">Feedback Grateful Note</string>
    <string name="email_uri">mailto:</string>
    <string name="saved_hours">SavedHours</string>
    <string name="saved_minutes">SavedMinutes</string>
    <string name="nama_file">Nama File</string>
    <string name="gratefulNote">GratefulNote</string>
    <string name="backup_restore"><![CDATA[Backup & Restore]]></string>
    <string name="data_kosong">-</string>
    <string name="last_time_backup">Last time backup :  %1$s</string>
    <string name="file_size">Size : %1$s</string>
    <string name="backup_file_name">backup.json</string>
    <string name="backup_text">Backup</string>
    <string name="restore_text">Restore</string>
    <string name="message_bundle_key">MessageBundleKey</string>
    <string name="requestkey_bundle_key">RequestKeyBundleKey</string>
    <string name="valuekey_bundle_key">ValueKeyBundleKey</string>
    <string name="backup_restore_process_status">Sedang melakukan proses %1$s…</string>
    <string name="confirm_delete_message">Yakin ingin menghapus data?</string>
    <string name="confirm_add_cancel_message">Yakin ingin membuang data?</string>
    <string name="confirm_add_cancel_request_key">ConfirmAddCancelRequestKey</string>
    <string name="confirm_add_cancel_value_key">ConfirmAddCancelValueKey</string>
    <string name="confirm_add_save_message">Yakin ingin menyimpan data?</string>
    <string name="confirm_add_save_request_key">ConfirmAddSaveRequestKey</string>
    <string name="confirm_add_save_value_key">ConfirmAddSaveValueKey</string>
    <string name="invalid_file_name">(invalid)</string>
    <string name="unselect_all">Unselect All</string>
    <string name="daily_reminder_fragment_title">Daily Reminder</string>
    <string name="hapus_item_dipilih">Hapus item dipilih</string>
    <string name="buat_daily_notification_baru">Buat daily notification baru</string>
    <string name="konfirmasi">Konfirmasi</string>
</resources>