<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/data_switch_filter_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/date_switch_filter_label"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/date_switch_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            app:layout_constraintTop_toBottomOf="@id/data_switch_filter_label"
            app:layout_constraintStart_toStartOf="@id/data_switch_filter_label" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/month_spinner_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/date_switch_filter"
            app:layout_constraintTop_toBottomOf="@id/date_switch_filter"
            android:layout_marginTop="24dp"
            android:hint="@string/bulan"
            android:labelFor="@id/month_spinner">

            <AutoCompleteTextView
                android:id="@+id/month_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/pembatas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/month_spinner_layout"
            app:layout_constraintBottom_toBottomOf="@id/month_spinner_layout"
            app:layout_constraintStart_toEndOf="@id/month_spinner_layout"
            android:text="@string/pembatas"
            android:layout_marginStart="24dp"
            android:textSize="25sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/year_spinner_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:hint="@string/tahun"
            app:layout_constraintBottom_toBottomOf="@id/month_spinner_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/pembatas"
            app:layout_constraintTop_toTopOf="@id/month_spinner_layout">

            <AutoCompleteTextView
                android:id="@+id/year_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/type_of_PE_spinner_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/type_of_positive_emotion"
            app:layout_constraintStart_toStartOf="@id/month_spinner_layout"
            app:layout_constraintTop_toBottomOf="@id/month_spinner_layout"
            >

            <AutoCompleteTextView
                android:id="@+id/type_of_PE_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>