<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="diary"
            type="com.example.gratefulnote.database.Diary" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/gratitude_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardElevation="20dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/tanggal"
                tanggal="@{diary}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="22-01-2013" />

            <HorizontalScrollView
                android:id="@+id/horizonal_scroll_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/delete_diary_icon"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/tanggal"
                app:layout_constraintTop_toBottomOf="@id/tanggal">
                <TextView
                    android:id="@+id/penyebab"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="6dp"
                    judul="@{diary.what}"
                    android:textSize="18sp"
                    tools:text="Dapat duit dari tuhan"
                    android:scrollbars="horizontal"/>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/tipe"
                tipe="@{diary.type}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tanggal"
                app:layout_constraintStart_toEndOf="@+id/tanggal"
                android:text="@string/positive_emotion_type_formatting"
                tools:text="(Serenity)" />

            <ImageView
                android:id="@+id/delete_diary_icon"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_margin="6dp"
                android:contentDescription="@string/delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close" />

            <ImageView
                android:id="@+id/edit_diary_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="6dp"
                android:contentDescription="@string/edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_edit" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/favorite_symbol"
                starVisibility="@{diary.isFavorite}"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                app:layout_constraintBottom_toBottomOf="@id/tipe"
                app:layout_constraintTop_toTopOf="@id/tipe"
                app:layout_constraintStart_toEndOf="@id/tipe"
                android:src="@drawable/ic_baseline_yellow_star"
                android:layout_marginStart="3dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>